--- a/styles/content/main.scss
+++ b/styles/content/main.scss
@@ -3,6 +3,4 @@ main:not(.main--unstyled) {
   padding: var(--content-inner-gutter);
   border-radius: 25px;
   box-shadow: 0 0 20px rgb(0 0 0 / 8%);
-  position: relative;
-  z-index: 1;
 }
