--- a/styles/layout/utilities.scss
+++ b/styles/layout/utilities.scss
@@ -4,9 +4,6 @@
 
 .max-width {
   @include max-width;
-
-  position: relative;
-  z-index: 1;
 }
 
 .full-bleed {
